--- a/schedule/yam/agama_unattended.yaml
+++ b/schedule/yam/agama_unattended.yaml
@@ -4,7 +4,9 @@ description: >
   Default unattended installation.
 schedule:
   - yam/agama/boot_agama
-  - yam/agama/agama_auto
+  - yam/agama/agama_arrange
+  - yam/agama/patch_agama_tests
+  - yam/agama/agama
   - installation/grub_test
   - installation/first_boot
   - yam/validate/validate_base_product
